--- a/web app/index.html
+++ b/web app/index.html
@@ -4,13 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <title>main menu</title>
+
+
+	<style>
+	</style>
+
 </head>
 
 <body>
 <header>
-    <div>
-<img src="img/229071-P28TFX-977 — копия.jpg" alt="" />
-    </div>
+    <ul class="products clearfix">
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+	<li class="product-wrapper">
+		<a href="" class="product"></a>
+	</li>
+</ul>
+
+
+<div class="product-photo">
+	<img src="img/229071-P28TFX-977 — копия.jpg" alt="">
+</div>
+
 </header>
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
