--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
 
+
 <head>
     <meta charset="UTF-8">
+	<meta name="author" content="Ilya Zavertnev">
+	<meta name="description" content="тестовая страница">
+	<meta name="keywords" content="test, coffee_shop">
+
+	<link rel="stylesheet" href="main.css">
+
+
+
     <title>main menu</title>
-
-
-	<style>
-	</style>
 
 </head>
 
