--- a/index.html
+++ b/index.html
@@ -18,40 +18,15 @@
 
 <body>
 <header>
-    <ul class="products clearfix">
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-	<li class="product-wrapper">
-		<a href="" class="product"></a>
-	</li>
-</ul>
-
-
-<div class="product-photo">
-	<img src="img/229071-P28TFX-977 — копия.jpg" alt="">
-</div>
 
 </header>
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+<script>
+	var WebApp = window.Telegram.WebApp;
+	WebApp.showAlert(`Добро пожаловать, @${WebApp.WebAppUser.username}.`);
+</script>
+
 </body>
 </html>
