--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-<script var WebApp = window.Telegram.WebApp;>
+<script>
+	var WebApp = window.Telegram.WebApp;
 	WebApp.showAlert(`Добро пожаловать, @${WebApp.WebAppUser.username}.`);
+
+
 </script>
 
 </body>
