--- a/index.html
+++ b/index.html
@@ -62,24 +62,40 @@
         button:hover {
         background: var(--tg-theme-secondary-bg-color);
         }
+
+        #form {
+        display: none;
+        text-align: center;
+        }
+
+        input{
+        width: 90%;
+        outline: none;
+        margin: 10px 5%;
+        padding: 15px 10px;
+        font-size: 14px;
+        border: 2px solid silver;
+        border-radius: 5px;
+        }
+
+        input:focus {
+        border-color: #db5d5d;
+        }
     </style>
 </head>
 <body>
     <div id="main">
         <h1> кофейня соседи онлайн</h1>
+        <img src="img/capuchino_cup.png" alt="">
+        <p>магазин создается!</p>
+        <button id="buy"> Заказать </button>
     </div>
-<header>
-
-</header>
-
-
-
-<script>
-	var WebApp = window.Telegram.WebApp;
-	WebApp.showAlert(`Добро пожаловать, @${WebApp.WebAppUser.username}.`);
-
-
-</script>
+    <form id="form">
+        <input type="text" placeholder="Name" id="user_name">
+        <input type="text" placeholder="Email" id="user_email">
+        <input type="text" placeholder="Phone nubmer" id="user_phone">
+        <button id="order">Оформить заказ</button>
+    </form>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
