--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <script>
     let tg = window.Telegram.Webapp;
     let buy = document.getElementById('buy');
-    let buy = document.getElementById('order');
+    let order = document.getElementById('order');
 
     buy.addEventListener('click', () => {
     document.getElementById('main').style.display = "none";
