--- a/index.html
+++ b/index.html
@@ -102,15 +102,16 @@
     let tg = window.Telegram.Webapp;
     let buy = document.getElementById('buy');
     let order = document.getElementById('order');
+    tg.expend();
 
     buy.addEventListener('click', () => {
-    document.getElementById('main').style.display = "none";
-    document.getElementById('form').style.display = "block";
-    document.getElementById('user_name').value = tg.initDataUnsafe.user.first_name + "" + tg.initDataUnsafe.user.last_name;
+        document.getElementById('main').style.display = "none";
+        document.getElementById('form').style.display = "block";
+        document.getElementById('user_name').value = tg.initDataUnsafe.user.first_name + "" + tg.initDataUnsafe.user.last_name;
     });
 
     order.addEventListener("click", () => {
-    tg.close();
+        tg.close();
     });
 </script>
 
